[gd_scene load_steps=2 format=3 uid="uid://cheatmenu123"]

[ext_resource type="Script" path="res://src/Scripts/UI/CheatMenu.gd" id="1_script"]

[node name="CheatMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Debug Menu"
horizontal_alignment = 1

[node name="BtnAddGold" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Add 1000 Gold"

[node name="BtnSkipWave" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Skip Wave"

[node name="BtnSetHP" type="Button" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Set HP 999999"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Control/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnSpawnUnit" type="Button" parent="Control/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Spawn Unit"

[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/BtnAddGold" to="." method="_on_add_gold_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/BtnSkipWave" to="." method="_on_skip_wave_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/BtnSetHP" to="." method="_on_set_hp_pressed"]
[connection signal="pressed" from="Control/PanelContainer/VBoxContainer/HBoxContainer/BtnSpawnUnit" to="." method="_on_spawn_unit_pressed"]
